--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@fancyapps/ui": "^5.0.16",
     "inputmask": "^5.0.8",
     "jquery": "^3.6.3",
+    "select2": "^4.1.0-rc.0",
     "swiper": "^9.2.2"
   }
 }
